--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@ background-color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
 }
+.conteiner{
+   max-width: 0;
+   padding-left: 0;
+   padding-right: 0 ;
+   margin-left: 0;
+   margin-right: 0;
+}
 a{
     text-decoration: none;
 }
