--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ background-color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
 }
+img{
+   display: block;
+}
 .conteiner{
    max-width: 0;
    padding-left: 0;
