--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@ line-height: 1.5;
 img{
    display: block;
 }
-.conteiner{
-   max-width: 0;
+.container{
    padding-left: 0;
    padding-right: 0 ;
    margin-left: 0;
@@ -106,6 +105,7 @@ a{
 }
 .our-team{
    background-color: #f4f4fd;
+   padding: 120px 0 120px 0 ;
 }
 .our-team-h{
     font-weight: 700;
