--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,11 @@ header{
    color: #ffffff;
  }
  .section-one-button{
+   display: block;
+   min-width: 169px;
+   height: 56px;
+   border: none;
+   border-radius: 4px;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
@@ -113,6 +118,7 @@ header{
     font-size: 20px;
     line-height: 1.2;
     color: #2e2f42;
+    padding: 188px 0 188px;
 }
 .section-two-h{
    font-weight: 500;
@@ -121,6 +127,7 @@ header{
    letter-spacing: 0.02em;
 }
 .section-two-text{
+   max-width: 496px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
