--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header{
    letter-spacing: 0.02em;
    color: #ffffff;
  }
- .section-one-button{
+ .button{
    display: block;
    min-width: 169px;
    height: 56px;
@@ -106,7 +106,7 @@ header{
    line-height: 1.5;
    letter-spacing: 0.04em;
    cursor: pointer;
-   background-color:#4D5AE5 ;
+   background-color: rav#4D5AE5 ;
    color: #ffffff;
  }
  .section-one-button:hover,
