--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,10 @@ header{
     letter-spacing: 0.02em;
     color: #434455;
 }
+.portfolio{
+   padding: 120px 0 120px 0;
+   
+}
  .portfolio-title{
     font-weight: 700;
     font-size: 36px;
