--- a/css/style.css
+++ b/css/style.css
@@ -124,12 +124,21 @@ header{
     color: #2e2f42;
     padding: 120pxpx 0 120px;
 }
-.section-two-h{
+.visually-hidden{
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    letter-spacing: 0.02em;
-   
+}
+.section-two-link{
+   display: flex;
+   gap: 24px;
+}
+.section-two-list{
+   width: calc((100% - 72px) / 4);
+}
+.section-two-h{
+   margin-bottom: 8px;
 }
 .section-two-text{
    max-width: 496px;
