--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ overflow: hidden;
    display: flex;
    gap: 24px;
 }
-.section-two-li{
+.section-two-list-li{
 flex-basis: calc((100%-3*24px)/4);
 }
 .section-two-h{
@@ -169,7 +169,7 @@ flex-basis: calc((100%-3*24px)/4);
 .our-team-list{
    display: flex;
    gap: 24px;
-   width: calc((100% - 3 * 24px) / 4);
+   flex-basis: calc((100% - 3 * 24px) / 4);
    border-radius: 0px 0px 4px 4px;
    background-color: #ffffff;
 }
