--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,9 @@ flex-basis: calc((100%-3*24px)/4);
     margin-bottom: 72px;
     color: #2e2f42;
 }
+.our-team-link{
+   display: flex;
+}
 .our-team-list{
    display: flex;
    gap: 24px;
