--- a/css/style.css
+++ b/css/style.css
@@ -178,9 +178,8 @@ flex-basis: calc((100%-3*24px)/4);
 }
 .name{
    padding: 32px 0 32px;
-
 }
-.our-team-h3{
+.name-h3{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
