--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ flex-basis: calc((100%-3*24px)/4);
 .our-team-list{
    display: flex;
    gap: 24px;
-   flex-basis: calc((100% - 3 * 24px) / 4);
+   width: calc((100% - 3 * 24px) / 4);
    border-radius: 0px 0px 4px 4px;
    background-color: #ffffff;
 }
