--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,9 @@ flex-basis: calc((100%-3*24px)/4);
    column-gap: 24px;
    row-gap: 48px;
  }
+ .portfolio-list{
+   width: calc((100% - 48px) / 3);
+ }
  .portfolio-h{
     font-weight: 500;
     font-size: 20px;
