--- a/css/style.css
+++ b/css/style.css
@@ -215,8 +215,9 @@ flex-basis: calc((100%-3*24px)/4);
    flex-wrap: wrap;
    column-gap: 24px;
    row-gap: 48px;
+   padding: 0;
  }
- .portfolio-list{
+ .portfolio-item{
    width: calc((100% - 48px) / 3);
  }
  .portfolio-h{
