--- a/css/style.css
+++ b/css/style.css
@@ -168,10 +168,10 @@ flex-basis: calc((100%-3*24px)/4);
 }
 .our-team-link{
    display: flex;
-}
-.our-team-list{
-   display: flex;
    gap: 24px;
+   padding: 0;
+}
+.our-team-item{
    width: calc((100% - 3 * 24px) / 4);
    border-radius: 0px 0px 4px 4px;
    background-color: #ffffff;
