--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,22 @@ img{
 a{
     text-decoration: none;
 }
-.header{
+.main-header{
    border-bottom: 1px solid #e7e9fc;
    display: flex;
    width: 1158px;
    margin: 0 auto;
    padding: 0 15px 0 15px;
+}
+.container {
+   max-width: 1158px;
+   margin: 0 auto;
+   padding: 0 15px;
+}
+.main-header.container{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
 .header-nav{
    display: flex;
