--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,6 @@ a{
    letter-spacing: 0.02em;
    color: #ffffff;
  }
- :root{
-   --button-bg-color: #4d5ae5;
- }
  .button{
    display: block;
    min-width: 169px;
@@ -118,7 +115,8 @@ a{
    letter-spacing: 0.04em;
    cursor: pointer;
    color: #ffffff;
-   background-color:#404bbf; ;
+   background-color:#404bbf; 
+   background: #4d5ae5;
  }
  .button:hover{
    background-color:#4d5ae5;
