--- a/css/style.css
+++ b/css/style.css
@@ -229,12 +229,17 @@ flex-basis: calc((100% - 72px) / 4)
  .portfolio-item{
    width: calc((100% - 48px) / 3);
  }
+ .profi{
+   padding: 32px 16px;
+   border: 1px solid #e7e9fc;
+ }
  .profi-title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
  }
  .portfolio-text{
     font-weight: 400;
