--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ flex-basis: calc((100% - 72px) / 4)
  .profi{
    padding: 32px 16px;
    border: 1px solid #e7e9fc;
+   border-top: none;
  }
  .profi-title{
     font-weight: 500;
