--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ flex-basis: calc((100% - 72px) / 4)
     color: #2e2f42;
     margin-bottom: 8px;
  }
- .portfolio-text{
+ .profi-text{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
