--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,6 @@ background-color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
 }
-ul{
-   text-decoration: none;
-}
-li{
-   text-decoration: none;
-}
 img{
    display: block;
 }
@@ -32,6 +26,8 @@ a{
 }
 .container {
    width: 1158px;
+   margin: 0 auto;
+   padding: 0 15px;
 }
 .main-header.container{
    display: flex;
