--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a{
    gap: 40px;
    padding: 24px 0 24px;
 }
- .header-nav-logo{
+ .nav-logo-web{
     font-family: "Raleway",sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -58,9 +58,11 @@ a{
  .nav-logo-studio{
     color: #2e2f42;
  }
- .nav-list-menu{
+ .nav-link{
    display: flex;
    gap: 40px;
+ }
+ .nav-item-menu{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
