--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ a{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0 24px;
  }
  .nav-list:hover,
  .nav-list:focus{
