--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ background-color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
 }
+ul{
+   list-style-type: none;
+}
 img{
    display: block;
 }
@@ -27,6 +30,7 @@ a{
 }
 .header .container{
    display: flex;
+   align-items: center;
 }
 .header-nav{
    display: flex;
@@ -36,6 +40,7 @@ a{
    display: flex;
    gap: 40px;
    padding: 24px 0 24px;
+   margin: 0;
 }
  .nav-logo-web{
     font-family: "Raleway",sans-serif;
@@ -54,9 +59,12 @@ a{
  .nav-link{
    display: flex;
    gap: 40px;
+   padding: 0;
  }
  .nav-list{
    padding: 24px 0 24px;
+   display: block;
+   margin-left: auto;
  }
  .nav-item-menu{
     font-weight: 500;
@@ -95,7 +103,7 @@ a{
    color: #404bbf;
  }
  .section-one{
-   padding: 188px 0 188px 0;
+   padding: 0;
     background-color: #2e2f42;
     color: #fff;
  }
@@ -106,6 +114,7 @@ a{
    text-align: center;
    letter-spacing: 0.02em;
    color: #ffffff;
+   margin: 0;
  }
  .button{
    display: block;
@@ -178,6 +187,7 @@ flex-basis: calc((100% - 72px) / 4)
     text-transform: capitalize;
     margin-bottom: 72px;
     color: #2e2f42;
+    margin: 0;
 }
 .our-team-link{
    display: flex;
@@ -273,7 +283,7 @@ flex-basis: calc((100% - 72px) / 4)
    color: #f4f4fd;
  }
  .footer-text{
-   min-width: 264px;
+   max-width: 264px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
