--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ a{
 .header .container{
    display: flex;
    align-items: center;
+   justify-content: space-between;
 }
 .header-nav{
    display: flex;
@@ -65,6 +66,7 @@ a{
    padding: 24px 0 24px;
    display: block;
    margin-left: auto;
+   color: #2e2f42;
  }
  .nav-item-menu{
     font-weight: 500;
@@ -77,21 +79,29 @@ a{
  .nav-list:focus{
    color: #404bbf;
  }
- .address{
-   display: flex;
+ .container-address{
+   display: block;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
    letter-spacing: 0.02em;
    font-style: normal;
     color: #434455;
+    align-items: center;
+ }
+ .address-a{
+   display: block;
  }
  .address-link{
    display: flex;
    gap: 40px;
+   text-align: center;
+   margin:0;
+   padding: 0;
  }
  .address-item{
    display: flex;
+   text-align: center;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
