--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a{
    margin: 0 auto;
    padding: 0 15px;
 }
-.header .container{
+ .header-container{
    display: flex;
    align-items: center;
    justify-content: space-between;
