--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ a{
     line-height: 1.5;
    letter-spacing: 0.02em;
    font-style: normal;
-    color: #434455;
+    color: #2e2f42;
     align-items: center;
  }
  .address-a{
