--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,12 @@ ul{
 img{
    display: block;
 }
-.container{
-   padding-left: 0;
-   padding-right: 0 ;
-   margin-left: 0;
-   margin-right: 0;
-}
 a{
     text-decoration: none;
 }
 .header{
    border-bottom: 1px solid #e7e9fc;
+   display: block;
 }
 .container {
 padding-left: 0;
@@ -32,17 +27,11 @@ margin-right: 0;
  .header-container{
 display: flex;
 text-align: center;
-justify-content: center;
+justify-content: space-between;
 }
 .header-nav{
    display: flex;
    align-items: center;
-}
-.nav-list-menu{
-   display: flex;
-   gap: 40px;
-   padding: 24px 0 24px;
-   margin: 0;
 }
  .nav-logo-web{
     font-family: "Raleway",sans-serif;
@@ -63,8 +52,8 @@ justify-content: center;
    padding: 0;
  }
  .nav-list{
-   padding: 24px 0 24px;
-   display: block;
+display: flex;
+gap: 40px;
    margin-left: auto;
    color: #2e2f42;
  }
@@ -83,6 +72,7 @@ justify-content: center;
 display: flex;
 align-items: center;
 gap: 20px;
+margin: 0;
  }
  .address-a{
    display: block;
