--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,20 @@ a{
 }
 .header{
    border-bottom: 1px solid #e7e9fc;
-   display: block;
 }
 .container {
-padding-left: 0;
-padding-right: 0;
-margin-left: 0;
-margin-right: 0;
+width: 100%;
 }
  .header-container{
 display: flex;
 text-align: center;
 justify-content: space-between;
+max-width: 1440px;
 }
 .header-nav{
    display: flex;
    align-items: center;
+   justify-content: space-between;
 }
  .nav-logo-web{
     font-family: "Raleway",sans-serif;
@@ -68,14 +66,8 @@ gap: 40px;
  .nav-list:focus{
    color: #404bbf;
  }
- .container-address{
-display: flex;
-align-items: center;
-gap: 20px;
-margin: 0;
- }
  .address-a{
-   display: block;
+   display: flex;
    color: #2e2f42;
  }
  .address-link{
