--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,10 @@ flex-basis: calc((100% - 72px) / 4)
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    padding: 0;
+    margin-top: 0;
     margin-bottom: 72px;
     color: #2e2f42;
-    margin: 0;
 }
 .our-team-link{
    display: flex;
