--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,23 @@
+*,
+*::after,
+*::before {
+   box-sizing: border-box;
+}
 body{
 font-family: 'Roboto', sans-serif;
 color: #434455;
 background-color: #ffffff;
 font-size: 16px;
 line-height: 1.5;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+   margin: 0;
 }
 ul{
    list-style-type: none;
