--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ max-width: 1158px;
     text-transform: uppercase;
     text-decoration: none;
     color:#4d5ae5;
+    margin-right:76px ;
  }
  .nav-logo-studio{
     color: #2e2f42;
