--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,16 @@ a{
 .container{
    max-width: 1156px;
    padding: 0 15px;
-      margin: 0 auto;
+   margin: 0 auto;
 }
  .header-container{
 display: flex;
 align-items: center;
 justify-content: space-between;
 max-width: 1158px;
+margin-right:156px;
+margin-left: 156px;
+padding: 0;
 }
 .nav{
    display: flex;
