--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
    border-bottom: 1px solid #e7e9fc;
 }
 .container{
-   max-width: 1156px;
+   width: 1158px;
    padding: 0 15px;
    margin: 0 auto;
 }
@@ -158,6 +158,7 @@ gap: 40px;
    cursor: pointer;
    color: #ffffff;
    background-color:#404bbf; 
+   background: #4d5ae5;
    margin: 0 auto;
    display: block;
 
